--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,6 +72,7 @@ import Footer from '../components/Footer.astro';
           </p>
           <p class="text-right text-gray-600 mt-8">
             <span class="block font-medium">時代社社長</span>
+            <span class="block mt-1">門脇 佳津代</span>
           </p>
         </div>
       </div>
