--- a/src/pages/ja/index.astro
+++ b/src/pages/ja/index.astro
@@ -66,7 +66,8 @@ import Footer from '../../components/Footer.astro';
             日本が戦争の道を歩んだ一因は、言論と出版の自由がなく、人々が自分の思想を表現できなかったことである。東アジアの未来や世界の平和に少しでも貢献できることを願い、時代社は『21世紀中国思想白書』を発刊し、この時期に中国国内で公に、率直に、真実かつ完全に表現できない様々な思想を記録し、世に伝えることにした。
           </p>
           <p class="text-right text-gray-600 mt-8">
-            <span class="block font-medium">時代社社長</span>
+            <span class="block font-medium">時代社取締役</span>
+            <span class="block mt-1">門脇 佳津代</span>
           </p>
         </div>
       </div>
