--- a/src/pages/zh-cn/index.astro
+++ b/src/pages/zh-cn/index.astro
@@ -67,6 +67,7 @@ import Footer from '../../components/Footer.astro';
           </p>
           <p class="text-right text-gray-600 mt-8">
             <span class="block font-medium">時代社社长</span>
+            <span class="block mt-1">門脇 佳津代</span>
           </p>
         </div>
       </div>
